# documentation/swagger_output.json
@@ -381,6 +381,9 @@
                 "la_user_account_pin": {
                   "example": "any"
                 },
+                "la_user_phone_number": {
+                  "example": "any"
+                },
                 "la_user_password": {
                   "example": "any"
                 },
@@ -429,6 +432,333 @@
       }
     },
     "/la_mobile_refresh_token_information/{la_refresh_token}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "la_refresh_token",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_create_account_information": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_email_address": {
+                  "example": "any"
+                },
+                "la_client_phone_number": {
+                  "example": "any"
+                },
+                "la_client_password": {
+                  "example": "any"
+                },
+                "la_sign_in_with": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_account_verification_information/{la_verification_code}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "la_verification_code",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_resend_verification_code": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_id": {
+                  "example": "any"
+                },
+                "la_resend_with": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_reset_code": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_email_address": {
+                  "example": "any"
+                },
+                "la_client_phone_number": {
+                  "example": "any"
+                },
+                "la_reset_with": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_resend_reset_code": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_id": {
+                  "example": "any"
+                },
+                "la_resend_with": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_reset_code_verification/{la_client_id}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "la_client_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_reset_code": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_update_password_information": {
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_create_pin_information": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_pin": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_login_information": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_email_address": {
+                  "example": "any"
+                },
+                "la_client_password": {
+                  "example": "any"
+                },
+                "la_client_phone_number": {
+                  "example": "any"
+                },
+                "la_client_account_pin": {
+                  "example": "any"
+                },
+                "la_login_with": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_unlock_pin_information/{la_client_id}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "la_client_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "la_client_account_pin": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_log_out_information/{la_refresh_token}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "la_refresh_token",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/la_client_refresh_information/{la_refresh_token}": {
       "post": {
         "description": "",
         "parameters": [
